--- a/src/styles/fontpicker.scss
+++ b/src/styles/fontpicker.scss
@@ -81,6 +81,7 @@
         }
 
         .font-backdrop {
+            z-index: -1;
             border: none;
             border-left: none;
             border-top: none;
